--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,13 +1,32 @@
 FROM php:8.1-fpm
 
-COPY php.ini /usr/local/etc/php/
+# ▼ 追加: GD関連のライブラリをインストール
+RUN apt-get update && apt-get install -y \
+    git \
+    unzip \
+    libpng-dev \
+    libjpeg-dev \
+    libfreetype6-dev \
+    libzip-dev \
+    zip \
+    && docker-php-ext-configure gd --with-freetype --with-jpeg \
+    && docker-php-ext-install gd pdo_mysql zip \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
+RUN docker-php-ext-install pdo_mysql zip
+RUN apt-get update && apt-get install -y libpng-dev libjpeg-dev libfreetype6-dev && \
+    docker-php-ext-configure gd --with-freetype --with-jpeg && \
+    docker-php-ext-install gd
+    
 
-RUN apt update \
-  && apt install -y default-mysql-client zlib1g-dev libzip-dev unzip \
-  && docker-php-ext-install pdo_mysql zip
-
-RUN curl -sS https://getcomposer.org/installer | php \
-  && mv composer.phar /usr/local/bin/composer \
-  && composer self-update
+# Composerを追加
+COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
 WORKDIR /var/www
+COPY . .
+
+RUN composer install --no-dev --optimize-autoloader
+RUN chown -R www-data:www-data /var/www \
+    && chmod -R 755 /var/www
+
+EXPOSE 9000
+CMD ["php-fpm"]
